fixed overflow hidden

--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -4,9 +4,12 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  // overflow: hidden;
 }
 /*--- Mobile ---*/
+body {
+  overflow: hidden;
+}
 
 #splash {
   background-image: url(images/mobile.png);
